# SPDX-FileCopyrightText: 2023 Angus Morrison <github@angus-morrison.com>
# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Andrei Zisu <matzipan@gmail.com>
#
# SPDX-License-Identifier: MPL-2.0

[workspace]
members = ["crates/*"]
exclude = ["tools/lox-gen"]
resolver = "3"

[workspace.package]
rust-version = "1.90"
edition = "2024"
license = "MPL-2.0"
authors = ["Helge Eichhorn and the lox-space contributors"]
repository = "https://github.com/lox-space/lox"
keywords = ["lox", "astrodynamics", "orbital-dynamics", "mission-analysis"]

[workspace.dependencies]
lox-bodies = { path = "crates/lox-bodies", version = "0.1.0-alpha.12" }
lox-core = { path = "crates/lox-core", version = "0.1.0-alpha.1" }
lox-derive = { path = "crates/lox-derive", version = "0.1.0-alpha.6" }
lox-earth = { path = "crates/lox-earth", version = "0.1.0-alpha.14" }
lox-ephem = { path = "crates/lox-ephem", version = "0.1.0-alpha.9" }
lox-frames = { path = "crates/lox-frames", version = "0.1.0-alpha.5" }
lox-io = { path = "crates/lox-io", version = "0.1.0-alpha.10" }
lox-math = { path = "crates/lox-math", version = "0.1.0-alpha.10" }
lox-orbits = { path = "crates/lox-orbits", version = "0.1.0-alpha.22" }
lox-test-utils = { path = "crates/lox-test-utils", version = "0.1.0-alpha.2" }
lox-time = { path = "crates/lox-time", version = "0.1.0-alpha.12" }
lox-units = { path = "crates/lox-units", version = "0.1.0-alpha.2" }

chrono = "0.4.43"
csv = "1.4.0"
differential-equations = "0.5.2"
divan = "0.1.21"
fast_polynomial = "0.3.0"
glam = "0.30.9"
hashbrown = { version = "0.16.0", features = ["rayon"] }
itertools = "0.14.0"
libm = "0.2.15"
nom = "8.0.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
numpy = "0.27.0"
proptest = "1.9.0"
pyo3 = { version = "0.27.1", features = ["hashbrown"] }
quick-xml = { version = "0.38.3", features = ["serde", "serialize"] }
rayon = "1.11.0"
regex = "1.12.2"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde-aux = "4.7.0"
serde_json = "1.0.145"
sgp4 = "2.3.0"
thiserror = "2.0.17"

[profile.release]
lto = "thin"
