# SPDX-FileCopyrightText: 2023 Angus Morrison <github@angus-morrison.com>
# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Andrei Zisu <matzipan@gmail.com>
#
# SPDX-License-Identifier: MPL-2.0

[workspace]
members = ["crates/*"]
exclude = ["tools/lox-gen", "crates/lox-odm/fuzz"]
resolver = "3"

[workspace.package]
rust-version = "1.90"
edition = "2024"
license = "MPL-2.0"
authors = ["Helge Eichhorn and the lox-space contributors"]
repository = "https://github.com/lox-space/lox"
keywords = ["lox", "astrodynamics", "orbital-dynamics", "mission-analysis"]
homepage = "https://github.com/lox-space/lox"
categories = ["aerospace", "science"]

[workspace.dependencies]
lox-analysis = { path = "crates/lox-analysis", version = "0.1.0-alpha.11" }
lox-bodies = { path = "crates/lox-bodies", version = "0.1.0-alpha.24" }
lox-comms = { path = "crates/lox-comms", version = "0.1.0-alpha.12" }
lox-core = { path = "crates/lox-core", version = "0.1.0-alpha.12" }
lox-derive = { path = "crates/lox-derive", version = "0.1.0-alpha.10" }
lox-earth = { path = "crates/lox-earth", version = "0.1.0-alpha.27" }
lox-ephem = { path = "crates/lox-ephem", version = "0.1.0-alpha.22" }
lox-frames = { path = "crates/lox-frames", version = "0.1.0-alpha.18" }
lox-io = { path = "crates/lox-io", version = "0.1.0-alpha.22" }
lox-itur = { path = "crates/lox-itur", version = "0.1.0-alpha.3" }
lox-math = { path = "crates/lox-math", version = "0.1.0-alpha.21" }
lox-odm = { path = "crates/lox-odm", version = "0.1.0-alpha.1" }
lox-orbits = { path = "crates/lox-orbits", version = "0.1.0-alpha.37" }
lox-test-utils = { path = "crates/lox-test-utils", version = "0.1.0-alpha.7", default-features = false }
lox-time = { path = "crates/lox-time", version = "0.1.0-alpha.24" }
lox-units = { path = "crates/lox-units", version = "0.1.0-alpha.13" }

arrayvec = "0.7.6"
chrono = "0.4.43"
csv = "1.4.0"
differential-equations = "0.5.2"
divan = { package = "codspeed-divan-compat", version = "4.3.0" }
fast_polynomial = { version = "0.3.0", default-features = false }
geo = "0.29"
geojson = "0.24"
glam = { version = "0.30.9", default-features = false }
itertools = "0.14.0"
libm = "0.2.15"
nalgebra = "0.34.1"
nom = { version = "8.0.0", default-features = false }
num = { version = "0.4.3", default-features = false }
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
numpy = "0.28.0"
proptest = "1.9.0"
pyo3 = "0.28.2"
quick-xml = { version = "0.38.3", features = ["serde", "serialize"] }
rayon = "1.11.0"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde-aux = "4.7.0"
serde_json = "1.0.145"
sgp4 = "2.3.0"
thiserror = { version = "2.0.17", default-features = false }
ureq = "3"
zip = "2"
zstd = "0.13"

[profile.release]
lto = "thin"
