# SPDX-FileCopyrightText: 2026 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "kerolox-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kerolox compute engine"
repository.workspace = true
