# SPDX-FileCopyrightText: 2026 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "kerolox-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kerolox SAR constellation sizing compute engine"
repository.workspace = true

[[bin]]
name = "kerolox-engine"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
buffa.workspace = true
connectrpc.workspace = true
futures.workspace = true
geo.workspace = true
geojson.workspace = true
kerolox-proto = { path = "../kerolox-proto" }
lox-analysis = { workspace = true, features = ["imaging", "stream"] }
lox-bodies = { workspace = true }
lox-frames = { workspace = true }
lox-orbits = { workspace = true }
lox-space = { workspace = true }
lox-stream = { workspace = true }
lox-time = { workspace = true }
sgp4.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
proptest.workspace = true
