# SPDX-FileCopyrightText: 2026 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "kerolox-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Protobuf contract for the Kerolox compute engine"
repository.workspace = true

[dependencies]
connectrpc.workspace = true
buffa.workspace = true
buffa-types.workspace = true
serde = { workspace = true }
http-body.workspace = true

[build-dependencies]
connectrpc-build.workspace = true
