[package]
name = "lox-bodies"
description = "Celestial body definitions for the Lox ecosystem"
version = "0.1.0-alpha.1"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-math.workspace = true

dyn-clone.workspace = true
fast_polynomial.workspace = true
pyo3 = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
float_eq.workspace = true
pyo3 = { workspace = true, features = ["auto-initialize"] }
rstest.workspace = true

[features]
python = ["dep:pyo3"]
