# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-bodies"
description = "Celestial body definitions for the Lox ecosystem"
version = "0.1.0-alpha.12"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-core.workspace = true
lox-math.workspace = true
lox-units.workspace = true

fast_polynomial.workspace = true
num-derive.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
lox-test-utils.workspace = true
rstest.workspace = true
