# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-bodies"
description = "Celestial body definitions for the Lox ecosystem"
version = "0.1.0-alpha.27"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
lox-core = { workspace = true, default-features = false }

serde = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = ["std"]
std = ["lox-core/std", "serde?/std"]
libm = ["lox-core/libm"]
serde = ["dep:serde", "lox-core/serde"]

[dev-dependencies]
lox-test-utils = { workspace = true, features = ["std"] }
rstest.workspace = true

[lib]
doctest = false
