# SPDX-FileCopyrightText: 2026 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-comms"
description = "Communication systems and link budget analysis for the Lox ecosystem"
version = "0.1.0-alpha.14"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
lox-core = { workspace = true, features = ["std"] }
lox-itur = { workspace = true }

serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "lox-core/serde", "lox-itur/serde"]

[dev-dependencies]
lox-test-utils = { workspace = true, features = ["derive"] }

[lib]
doctest = false
