[package]
name = "lox-coords"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lox-bodies.workspace = true
lox-core.workspace = true
lox-time.workspace = true

float_eq.workspace = true
glam.workspace = true
