# SPDX-FileCopyrightText: 2025 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-core"
description = "Common data types and utilities for the Lox Astrodynamics Toolkit"
version = "0.1.0-alpha.1"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-test-utils = { workspace = true, features = ["derive"] }

chrono = { workspace = true, optional = true }
fast_polynomial.workspace = true
glam.workspace = true
num.workspace = true
regex.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true

[features]
chrono = ["dep:chrono"]
serde = ["dep:serde", "glam/serde"]

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
