# SPDX-FileCopyrightText: 2025 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-core"
description = "Common data types and utilities for the Lox ecosystem"
version = "0.1.0-alpha.12"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
lox-test-utils = { workspace = true, features = ["derive"] }

chrono = { workspace = true, optional = true }
fast_polynomial.workspace = true
glam.workspace = true
nom = { workspace = true, features = ["alloc"] }
num-traits.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = ["std"]
std = [
    "glam/std",
    "nom/std",
    "num-traits/std",
    "fast_polynomial/std",
    "lox-test-utils/std",
    "chrono?/std",
    "serde?/std",
]
libm = [
    "glam/libm",
    "num-traits/libm",
    "fast_polynomial/libm",
    "lox-test-utils/libm",
]
chrono = ["dep:chrono"]
serde = ["dep:serde", "glam/serde"]

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
