# SPDX-FileCopyrightText: 2025 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-core"
description = "Common data types and utilities for the Lox ecosystem"
version = "0.1.0-alpha.14"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
lox-approx = { workspace = true, default-features = false, features = ["derive", "glam"] }

chrono = { workspace = true, optional = true }
fast_polynomial.workspace = true
glam.workspace = true
libm = { workspace = true, optional = true }
nom = { workspace = true, features = ["alloc"] }
serde = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = ["std"]
std = [
    "glam/std",
    "nom/std",
    "fast_polynomial/std",
    "lox-approx/std",
    "chrono?/std",
    "serde?/std",
]
libm = [
    "dep:libm",
    "glam/libm",
    "fast_polynomial/libm",
]
chrono = ["dep:chrono"]
serde = ["dep:serde", "glam/serde"]

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
serde_json.workspace = true
