[package]
name = "lox-derive"
description = "Derive macros for the Lox ecosystem"
version = "0.1.0-alpha.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.20"
syn = "2.0.63"
