# SPDX-FileCopyrightText: 2024 Andrei Zisu <matzipan@gmail.com>
# SPDX-FileCopyrightText: 2024 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-derive"
description = "Derive macros for the Lox ecosystem"
version = "0.1.0-alpha.5"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.81"
quote = "1.0.20"
syn = "2.0.63"
