[package]
name = "lox-earth"
version = "0.1.0-alpha.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lox-bodies.workspace = true
lox-io.workspace = true
lox-time.workspace = true
lox-utils.workspace = true

fast_polynomial.workspace = true
glam.workspace = true
thiserror.workspace = true

[dev-dependencies]
float_eq.workspace = true
rstest.workspace = true
