# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-earth"
description = "Tools for Earth-based astrodynamics for the Lox ecosystem"
version = "0.1.0-alpha.13"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-bodies.workspace = true
lox-core.workspace = true
lox-frames.workspace = true
lox-io.workspace = true
lox-time.workspace = true
lox-math.workspace = true
lox-test-utils.workspace = true

csv.workspace = true
fast_polynomial.workspace = true
glam.workspace = true
num.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
