[package]
name = "lox-eop"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
num-traits = "0.2.17"
serde = { version = "1.0.190", features = ["derive"] }
thiserror.workspace = true
lox-utils.workspace = true
lox-time.workspace = true
lox-bodies.workspace = true
fast_polynomial.workspace = true

[dev-dependencies]
float_eq = "1.0.1"
rstest.workspace = true

