[package]
name = "lox-ephem"
description = "Ephemerides for the Lox ecosystem"
version = "0.1.0-alpha.7"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-units.workspace = true

nom.workspace = true
thiserror.workspace = true
