# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-ephem"
description = "Ephemerides for the Lox ecosystem"
version = "0.1.0-alpha.8"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-core.workspace = true
lox-units.workspace = true

nom.workspace = true
thiserror.workspace = true
