[package]
name = "lox-frames"
description = "Reference frame transformations for the Lox ecosystem"
version = "0.1.0-alpha.3"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-bodies.workspace = true
lox-math.workspace = true
lox-time.workspace = true
lox-units.workspace = true

glam.workspace = true
hashbrown.workspace = true
thiserror.workspace = true

[dev-dependencies]
lox-test-utils.workspace = true
rstest.workspace = true
