# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Andrei Zisu <matzipan@gmail.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-io"
description = "Interfaces for industry-standard astrodynamics file formats for the Lox ecosystem"
version = "0.1.0-alpha.9"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-core.workspace = true
lox-derive.workspace = true
lox-math.workspace = true
lox-time.workspace = true
lox-units.workspace = true

csv.workspace = true
nom.workspace = true
quick-xml.workspace = true
regex.workspace = true
serde-aux.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
lox-test-utils.workspace = true
rstest.workspace = true
