# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Andrei Zisu <matzipan@gmail.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-io"
description = "Interfaces for industry-standard astrodynamics file formats for the Lox ecosystem"
version = "0.1.0-alpha.25"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
lox-core = { workspace = true, features = ["std"] }
lox-time.workspace = true
nom = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }

[dev-dependencies]
lox-test-utils = { workspace = true, features = ["std"] }
rstest.workspace = true
