[package]
name = "lox-math"
description = "Mathematical utilities for the Lox ecosystem"
version = "0.1.0-alpha.8"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-units.workspace = true
lox-test-utils.workspace = true

fast_polynomial.workspace = true
glam.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
