# SPDX-FileCopyrightText: 2024 Andrei Zisu <matzipan@gmail.com>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
# SPDX-FileCopyrightText: 2024 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-math"
description = "Mathematical utilities for the Lox ecosystem"
version = "0.1.0-alpha.9"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-units.workspace = true
lox-test-utils.workspace = true

fast_polynomial.workspace = true
glam.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
