# SPDX-FileCopyrightText: 2024 Andrei Zisu <matzipan@gmail.com>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
# SPDX-FileCopyrightText: 2024 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-math"
description = "Mathematical utilities for the Lox ecosystem"
version = "0.1.0-alpha.22"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
lox-core = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["lox-core/std"]
libm = ["lox-core/libm"]
serde = ["lox-core/serde"]

[lib]
test = false
doctest = false
