[package]
name = "lox-orbits"
description = "Spacecraft orbit modelling tools for the Lox ecosystem"
version = "0.1.0-alpha.2"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-bodies.workspace = true
lox-ephem.workspace = true
lox-time.workspace = true
lox-math.workspace = true

csv.workspace = true
float_eq.workspace = true
glam.workspace = true
itertools.workspace = true
libm.workspace = true
numpy = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
sgp4.workspace = true
thiserror.workspace = true

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }

[features]
python = ["dep:pyo3", "dep:numpy", "lox-bodies/python", "lox-time/python"]
