# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-orbits"
description = "Spacecraft orbit modelling tools for the Lox ecosystem"
version = "0.1.0-alpha.21"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-bodies.workspace = true
lox-core.workspace = true
lox-earth.workspace = true
lox-ephem.workspace = true
lox-frames.workspace = true
lox-math.workspace = true
lox-test-utils.workspace = true
lox-time.workspace = true
lox-units.workspace = true

csv.workspace = true
differential-equations.workspace = true
glam.workspace = true
hashbrown.workspace = true
itertools.workspace = true
libm.workspace = true
rayon.workspace = true
sgp4.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
