# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-orbits"
description = "Spacecraft orbit modelling tools for the Lox ecosystem"
version = "0.1.0-alpha.37"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
lox-bodies.workspace = true
lox-core = { workspace = true, features = ["std"] }
lox-earth.workspace = true
lox-ephem.workspace = true
lox-frames.workspace = true
lox-math.workspace = true
lox-odm = { workspace = true, optional = true }
lox-test-utils = { workspace = true, features = ["std"] }
lox-time = { workspace = true, features = ["chrono"] }
lox-units.workspace = true

chrono = { workspace = true, optional = true }
csv.workspace = true
differential-equations.workspace = true
itertools.workspace = true
libm.workspace = true
serde = { workspace = true, optional = true }
sgp4.workspace = true
thiserror.workspace = true

[features]
odm = ["dep:lox-odm", "dep:chrono"]
serde = [
  "dep:serde",
  "lox-bodies/serde",
  "lox-core/serde",
  "lox-frames/serde",
  "lox-time/serde",
  "sgp4/serde",
]

[lib]
doctest = false
